log
Thu 25 Apr 2024 03:44:21 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b7c21b8
Thu 25 Apr 2024 04:06:05 AM UTC: 
 hashmap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
5abb5f4
Thu 25 Apr 2024 04:09:40 AM UTC: 
 hashmap.c | 19 +++++++++----------
 1 file changed, 9 insertions(+), 10 deletions(-)
 tests:  7|4
total_score: 30/70
f9420a6
Thu 25 Apr 2024 04:10:22 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
e6c9cd2
Thu 25 Apr 2024 04:20:51 AM UTC: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:85:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   85 |     return NULL;
      |            ^~~~
hashmap.c:81:6: note: declared here
   81 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
hashmap.c:87:34: error: ‘capacity’ undeclared (first use in this function)
   87 |   mapa->buckets = (Pair**)calloc(capacity, sizeof(Pair*));
      |                                  ^~~~~~~~
hashmap.c:87:34: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:91:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   91 |     return NULL;
      |            ^~~~
hashmap.c:81:6: note: declared here
   81 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
hashmap.c:97:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   97 |   return mapa;
      |          ^~~~
hashmap.c:81:6: note: declared here
   81 | void eraseMap(HashMap * map,  char * key) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c98cc9
Thu 25 Apr 2024 04:21:38 AM UTC: 
 hashmap.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  13|2
total_score: 50/70
ebd2ab7
Thu 25 Apr 2024 04:23:00 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|1
total_score: 60/70
604ecb0
Thu 25 Apr 2024 04:24:07 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
f78b193
